--- a/module_1/Movies_IMBD_v4.1_solution.ipynb
+++ b/module_1/Movies_IMBD_v4.1_solution.ipynb
@@ -69,143 +69,150 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>905</th>\n",
-       "      <td>tt0267913</td>\n",
-       "      <td>84000000</td>\n",
-       "      <td>275650703</td>\n",
-       "      <td>Scooby-Doo</td>\n",
-       "      <td>Freddie Prinze Jr.|Sarah Michelle Gellar|Matth...</td>\n",
-       "      <td>Raja Gosnell</td>\n",
-       "      <td>Get a Clue</td>\n",
-       "      <td>The Mystery Inc. gang have gone their separate...</td>\n",
-       "      <td>88</td>\n",
-       "      <td>Mystery|Adventure|Comedy</td>\n",
-       "      <td>Atlas Entertainment|Mosaic Media Group|Warner ...</td>\n",
-       "      <td>6/14/2002</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>2002</td>\n",
+       "      <th>1050</th>\n",
+       "      <td>tt1714203</td>\n",
+       "      <td>5000000</td>\n",
+       "      <td>8493728</td>\n",
+       "      <td>Piranha 3DD</td>\n",
+       "      <td>Danielle Panabaker|Matt Bush|Katrina Bowden|Je...</td>\n",
+       "      <td>John Gulager</td>\n",
+       "      <td>Twice the Teeth. Twice the Terror.</td>\n",
+       "      <td>After the events at Lake Victoria, the prehist...</td>\n",
+       "      <td>83</td>\n",
+       "      <td>Horror|Thriller|Comedy</td>\n",
+       "      <td>Dimension Films|Mark Canton Productions|Intell...</td>\n",
+       "      <td>5/11/2012</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>2012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1281</th>\n",
-       "      <td>tt2017020</td>\n",
-       "      <td>105000000</td>\n",
-       "      <td>347434178</td>\n",
-       "      <td>The Smurfs 2</td>\n",
-       "      <td>Neil Patrick Harris|Christina Ricci|Katy Perry...</td>\n",
-       "      <td>Raja Gosnell</td>\n",
-       "      <td>Get ready to get naughty!</td>\n",
-       "      <td>The evil wizard Gargamel creates a couple of m...</td>\n",
-       "      <td>105</td>\n",
-       "      <td>Fantasy|Family|Comedy|Animation</td>\n",
-       "      <td>Columbia Pictures|Sony Pictures Animation|Kern...</td>\n",
-       "      <td>7/30/2013</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>744</th>\n",
-       "      <td>tt1411238</td>\n",
+       "      <th>1774</th>\n",
+       "      <td>tt0465538</td>\n",
        "      <td>25000000</td>\n",
-       "      <td>147780440</td>\n",
-       "      <td>No Strings Attached</td>\n",
-       "      <td>Natalie Portman|Ashton Kutcher|Greta Gerwig|Ke...</td>\n",
-       "      <td>Ivan Reitman</td>\n",
-       "      <td>Friendship has its benefits.</td>\n",
-       "      <td>Emma is a busy doctor who sets up a seemingly ...</td>\n",
-       "      <td>108</td>\n",
-       "      <td>Comedy|Romance</td>\n",
-       "      <td>Paramount Pictures|Spyglass Entertainment|Kata...</td>\n",
-       "      <td>1/12/2011</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>2011</td>\n",
+       "      <td>92991835</td>\n",
+       "      <td>Michael Clayton</td>\n",
+       "      <td>George Clooney|Tom Wilkinson|Tilda Swinton|Syd...</td>\n",
+       "      <td>Tony Gilroy</td>\n",
+       "      <td>The truth can be adjusted</td>\n",
+       "      <td>A law firm brings in its 'fixer' to remedy the...</td>\n",
+       "      <td>119</td>\n",
+       "      <td>Drama|Mystery|Crime</td>\n",
+       "      <td>Castle Rock Entertainment|Mirage Enterprises|S...</td>\n",
+       "      <td>9/28/2007</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>355</th>\n",
-       "      <td>tt0891592</td>\n",
-       "      <td>50000000</td>\n",
-       "      <td>12764201</td>\n",
-       "      <td>Street Fighter: The Legend of Chun-Li</td>\n",
-       "      <td>Kristin Kreuk|Chris Klein|Neal McDonough|Micha...</td>\n",
-       "      <td>Andrzej Bartkowiak</td>\n",
-       "      <td>Some fight for power. Some fight for us.</td>\n",
-       "      <td>When a teenager, Chun-Li witnesses the kidnapp...</td>\n",
-       "      <td>97</td>\n",
-       "      <td>Action|Adventure|Science Fiction|Thriller</td>\n",
-       "      <td>Twentieth Century Fox Film Corporation|Hyde Pa...</td>\n",
-       "      <td>2/27/2009</td>\n",
-       "      <td>4.1</td>\n",
+       "      <th>286</th>\n",
+       "      <td>tt0898367</td>\n",
+       "      <td>32000000</td>\n",
+       "      <td>27635305</td>\n",
+       "      <td>The Road</td>\n",
+       "      <td>Viggo Mortensen|Kodi Smit-McPhee|Charlize Ther...</td>\n",
+       "      <td>John Hillcoat</td>\n",
+       "      <td>In a moment the world changed forever.</td>\n",
+       "      <td>A father and his son walk alone through burned...</td>\n",
+       "      <td>111</td>\n",
+       "      <td>Adventure|Drama</td>\n",
+       "      <td>2929 Productions|Dimension Films|Nick Wechsler...</td>\n",
+       "      <td>11/25/2009</td>\n",
+       "      <td>6.7</td>\n",
        "      <td>2009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>814</th>\n",
-       "      <td>tt0999913</td>\n",
-       "      <td>25000000</td>\n",
-       "      <td>10324441</td>\n",
-       "      <td>Straw Dogs</td>\n",
-       "      <td>James Marsden|Kate Bosworth|Alexander SkarsgÃ¥...</td>\n",
-       "      <td>Rod Lurie</td>\n",
-       "      <td>Everyone Has A Breaking Point</td>\n",
-       "      <td>L.A. screenwriter David Sumner relocates with ...</td>\n",
-       "      <td>110</td>\n",
-       "      <td>Thriller</td>\n",
-       "      <td>Battleplan Productions</td>\n",
-       "      <td>9/16/2011</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>2011</td>\n",
+       "      <th>1001</th>\n",
+       "      <td>tt1259521</td>\n",
+       "      <td>30000000</td>\n",
+       "      <td>66486080</td>\n",
+       "      <td>The Cabin in the Woods</td>\n",
+       "      <td>Kristen Connolly|Chris Hemsworth|Anna Hutchiso...</td>\n",
+       "      <td>Drew Goddard</td>\n",
+       "      <td>If you hear a strange sound outside... have sex</td>\n",
+       "      <td>Five college friends spend the weekend at a re...</td>\n",
+       "      <td>95</td>\n",
+       "      <td>Horror|Thriller</td>\n",
+       "      <td>Lionsgate|Mutant Enemy Productions</td>\n",
+       "      <td>4/12/2012</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1177</th>\n",
+       "      <td>tt2294629</td>\n",
+       "      <td>150000000</td>\n",
+       "      <td>1274219009</td>\n",
+       "      <td>Frozen</td>\n",
+       "      <td>Kristen Bell|Idina Menzel|Jonathan Groff|Josh ...</td>\n",
+       "      <td>Chris Buck|Jennifer Lee</td>\n",
+       "      <td>Only the act of true love will thaw a frozen h...</td>\n",
+       "      <td>Young princess Anna of Arendelle dreams about ...</td>\n",
+       "      <td>102</td>\n",
+       "      <td>Animation|Adventure|Family</td>\n",
+       "      <td>Walt Disney Pictures|Walt Disney Animation Stu...</td>\n",
+       "      <td>11/27/2013</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>2013</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        imdb_id     budget    revenue                         original_title  \\\n",
-       "905   tt0267913   84000000  275650703                             Scooby-Doo   \n",
-       "1281  tt2017020  105000000  347434178                           The Smurfs 2   \n",
-       "744   tt1411238   25000000  147780440                    No Strings Attached   \n",
-       "355   tt0891592   50000000   12764201  Street Fighter: The Legend of Chun-Li   \n",
-       "814   tt0999913   25000000   10324441                             Straw Dogs   \n",
+       "        imdb_id     budget     revenue          original_title  \\\n",
+       "1050  tt1714203    5000000     8493728             Piranha 3DD   \n",
+       "1774  tt0465538   25000000    92991835         Michael Clayton   \n",
+       "286   tt0898367   32000000    27635305                The Road   \n",
+       "1001  tt1259521   30000000    66486080  The Cabin in the Woods   \n",
+       "1177  tt2294629  150000000  1274219009                  Frozen   \n",
        "\n",
-       "                                                   cast            director  \\\n",
-       "905   Freddie Prinze Jr.|Sarah Michelle Gellar|Matth...        Raja Gosnell   \n",
-       "1281  Neil Patrick Harris|Christina Ricci|Katy Perry...        Raja Gosnell   \n",
-       "744   Natalie Portman|Ashton Kutcher|Greta Gerwig|Ke...        Ivan Reitman   \n",
-       "355   Kristin Kreuk|Chris Klein|Neal McDonough|Micha...  Andrzej Bartkowiak   \n",
-       "814   James Marsden|Kate Bosworth|Alexander SkarsgÃ¥...           Rod Lurie   \n",
+       "                                                   cast  \\\n",
+       "1050  Danielle Panabaker|Matt Bush|Katrina Bowden|Je...   \n",
+       "1774  George Clooney|Tom Wilkinson|Tilda Swinton|Syd...   \n",
+       "286   Viggo Mortensen|Kodi Smit-McPhee|Charlize Ther...   \n",
+       "1001  Kristen Connolly|Chris Hemsworth|Anna Hutchiso...   \n",
+       "1177  Kristen Bell|Idina Menzel|Jonathan Groff|Josh ...   \n",
        "\n",
-       "                                       tagline  \\\n",
-       "905                                 Get a Clue   \n",
-       "1281                 Get ready to get naughty!   \n",
-       "744               Friendship has its benefits.   \n",
-       "355   Some fight for power. Some fight for us.   \n",
-       "814              Everyone Has A Breaking Point   \n",
+       "                     director  \\\n",
+       "1050             John Gulager   \n",
+       "1774              Tony Gilroy   \n",
+       "286             John Hillcoat   \n",
+       "1001             Drew Goddard   \n",
+       "1177  Chris Buck|Jennifer Lee   \n",
+       "\n",
+       "                                                tagline  \\\n",
+       "1050                 Twice the Teeth. Twice the Terror.   \n",
+       "1774                          The truth can be adjusted   \n",
+       "286              In a moment the world changed forever.   \n",
+       "1001    If you hear a strange sound outside... have sex   \n",
+       "1177  Only the act of true love will thaw a frozen h...   \n",
        "\n",
        "                                               overview  runtime  \\\n",
-       "905   The Mystery Inc. gang have gone their separate...       88   \n",
-       "1281  The evil wizard Gargamel creates a couple of m...      105   \n",
-       "744   Emma is a busy doctor who sets up a seemingly ...      108   \n",
-       "355   When a teenager, Chun-Li witnesses the kidnapp...       97   \n",
-       "814   L.A. screenwriter David Sumner relocates with ...      110   \n",
+       "1050  After the events at Lake Victoria, the prehist...       83   \n",
+       "1774  A law firm brings in its 'fixer' to remedy the...      119   \n",
+       "286   A father and his son walk alone through burned...      111   \n",
+       "1001  Five college friends spend the weekend at a re...       95   \n",
+       "1177  Young princess Anna of Arendelle dreams about ...      102   \n",
        "\n",
-       "                                         genres  \\\n",
-       "905                    Mystery|Adventure|Comedy   \n",
-       "1281            Fantasy|Family|Comedy|Animation   \n",
-       "744                              Comedy|Romance   \n",
-       "355   Action|Adventure|Science Fiction|Thriller   \n",
-       "814                                    Thriller   \n",
+       "                          genres  \\\n",
+       "1050      Horror|Thriller|Comedy   \n",
+       "1774         Drama|Mystery|Crime   \n",
+       "286              Adventure|Drama   \n",
+       "1001             Horror|Thriller   \n",
+       "1177  Animation|Adventure|Family   \n",
        "\n",
        "                                   production_companies release_date  \\\n",
-       "905   Atlas Entertainment|Mosaic Media Group|Warner ...    6/14/2002   \n",
-       "1281  Columbia Pictures|Sony Pictures Animation|Kern...    7/30/2013   \n",
-       "744   Paramount Pictures|Spyglass Entertainment|Kata...    1/12/2011   \n",
-       "355   Twentieth Century Fox Film Corporation|Hyde Pa...    2/27/2009   \n",
-       "814                              Battleplan Productions    9/16/2011   \n",
+       "1050  Dimension Films|Mark Canton Productions|Intell...    5/11/2012   \n",
+       "1774  Castle Rock Entertainment|Mirage Enterprises|S...    9/28/2007   \n",
+       "286   2929 Productions|Dimension Films|Nick Wechsler...   11/25/2009   \n",
+       "1001                 Lionsgate|Mutant Enemy Productions    4/12/2012   \n",
+       "1177  Walt Disney Pictures|Walt Disney Animation Stu...   11/27/2013   \n",
        "\n",
        "      vote_average  release_year  \n",
-       "905            5.3          2002  \n",
-       "1281           5.5          2013  \n",
-       "744            6.1          2011  \n",
-       "355            4.1          2009  \n",
-       "814            5.3          2011  "
+       "1050           4.2          2012  \n",
+       "1774           6.3          2007  \n",
+       "286            6.7          2009  \n",
+       "1001           6.5          2012  \n",
+       "1177           7.5          2013  "
       ]
      },
      "execution_count": 2,
@@ -306,15 +313,6 @@
     "#So we need to change this in datetime format\n",
     "# ...\n",
     "\n",
-    "# # update data. add 'prifit' column\n",
-    "# data['profit'] = data[['revenue','budget']].apply(lambda row: row['revenue'] - row['budget'], axis=1 )\n",
-    "# # update data. add 'month' column\n",
-    "# data['month'] = data['release_date'].apply(lambda c: int(split_str_by_char(str(c),'/')[0]))\n",
-    "# # update data. add 'title_lenght' column\n",
-    "# data['title_lenght'] = data['original_title'].apply(lambda c: len(str(c)))\n",
-    "# # update data. add 'title_lenght' column\n",
-    "# data['overview_words_cnt'] = overview_data['overview'].apply(lambda c: len(split_str_by_char(str(c), ' ')))\n",
-    "\n",
     "# update data. add 'prifit' column\n",
     "data['profit'] = data[['revenue','budget']].apply(lambda row: row['revenue'] - row['budget'], axis=1 )\n",
     "# update data. add 'month' column\n",
@@ -323,12 +321,6 @@
     "data['title_lenght'] = data['original_title'].apply(lambda c: len(str(c)))\n",
     "# update data. add 'title_lenght' column\n",
     "data['overview_words_cnt'] = data['overview'].apply(lambda c: len(split_str_by_char(str(c), ' ')))\n",
-    "\n",
-    "# create aliaces\n",
-    "# profit_data = data[['imdb_id', 'profit']]\n",
-    "# month_data = data[['imdb_id', 'month']] \n",
-    "# title_data = data[['imdb_id', 'title_lenght']] \n",
-    "# overview_data = data[['imdb_id', 'overview_words_cnt']] \n",
     "\n",
     "# Create ganre exploded DF\n",
     "# also we need the 'profit' column for \n",
