store draft notebook

--- a/module_1/module_1_draft.ipynb
+++ b/module_1/module_1_draft.ipynb
@@ -1358,12 +1358,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "uCfuTkRbVqAg"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 0\r\n",
+      "drwxr-xr-x   2 lissdx  staff   64 Nov  7 11:59 \u001b[34m.\u001b[m\u001b[m/\r\n",
+      "drwxr-xr-x  10 lissdx  staff  320 Nov  7 11:59 \u001b[34m..\u001b[m\u001b[m/\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls -al"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
